--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <input type="email" id="email" name="email" required>
 
     <label for="qtype">Query Type</label>
-    <select name="qtype" id="qtype">
+    <select name="qtype" id="qtype" required>
+      <option style="display:none" value="" data-default disabled selected></option>
       <option value="general">General Enquiry</option>
       <option value="support">Support Request</option>
     </select>
@@ -37,12 +38,11 @@
     <label for="message">Message</label>
     <textarea name="message" id="message" required></textarea>
 
-    <input type="checkbox">I consent to being contacted by the team
+    <input type="checkbox" id="checkbox">I consent to being contacted by the team
 
-    <button type="submit">Submit</button>
+    <button type="submit" id="submit" disabled>Submit</button>
 
-    <!-- Message Sent!
-    Thanks for completing the form. We'll be in touch soon! -->
+    <!--  -->
   </form>
 
   <footer>
@@ -52,4 +52,7 @@
     </div>
   </footer>
 </body>
+
+<script src="./src/script.js"></script>
+
 </html>
